index.html 파일 추가

--- a/.well-known/nlweb/agent-config.json
+++ b/.well-known/nlweb/agent-config.json
@@ -1,7 +1,7 @@
 {
     "interface": {
-      "name": "kimtoma-about-interface",
-      "description": "질문-답변용 인터페이스",
+      "name": "kimtoma-about",
+      "description": "김경수에 대한 질문-답변용 인터페이스",
       "entry_point": "/about/index.html"
     },
     "intents": [
